--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -88,7 +88,7 @@ jobs:
         run: |
           docker run --rm -u $(id -u):$(id -g) \
             -v "$PWD/perf-test:/tests" \
-            -v "$PWD/perf-results:/results" \
+            -v "$PWD/perf-test/results:/results" \
             justb4/jmeter \
             -n \
             -t /tests/order_creation_and_supplier_poll_perf-test.jmx \
